# crewai-knowledge-project

./: .env  README.md  output.html  pyproject.toml  requirements.txt
src/knowledge_extract/: crew.py  main.py
src/knowledge_extract/config/: agents.yaml  tasks.yaml
