[project]
name = "knowledge_extract"
version = "0.1.0"
description = "knowledge_extract using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-rag-chromadb-factory",
    "crewai[tools]>=0.193.2,<1.0.0",
]

[project.scripts]
knowledge_extract = "knowledge_extract.main:run"
run_crew = "knowledge_extract.main:run"
train = "knowledge_extract.main:train"
replay = "knowledge_extract.main:replay"
test = "knowledge_extract.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
